# lingpen

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.github/workflow/: ci.yml
.github/workflows/: backend-tests.yml  frontend-tests.yml  lint.yml
backend/: Dockerfile  init_db.py  main.py  models.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/api/: health.py
backend/app/: config.py  exceptions.py  logging_config.py  main.py  middleware.py
backend/app/api/v1/: auth.py  health.py  router.py  users.py
backend/app/core/: database.py
backend/app/models/: __init__.py  base.py
backend/app/schemas/: common.py  user.py
backend/app/security/: auth.py  permissions.py
backend/app/services/: user_service.py
backend/core/: database.py
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: __init__.py
backend/tests/integration/: __init__.py  test_core_flow.py  test_health_endpoint.py
backend/tests/unit/: __init__.py  test_auth.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/__tests__/: setup.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/config/: env.ts  routes.ts
frontend/src/context/: AppProvider.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
frontend/src/types/: api.ts
(+21 files in other folders)
