[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lingpen-api"
version = "0.1.0"
description = "Linguistic annotation and treebank management system"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
